Complete project with final functionality and design

--- a/index.css
+++ b/index.css
@@ -1,4 +1,11 @@
-html, body {
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html,
+body {
     margin: 0;
     padding: 0;
     font-family: "Urbanist", sans-serif;
@@ -7,17 +14,13 @@ html, body {
 }
 
 body {
-    background: no-repeat center center fixed; 
+    background: no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+
 
 main {
     padding: 1.5em;
@@ -33,14 +36,35 @@ main {
 .weather {
     grid-column: 3/3;
     justify-self: end;
+
 }
 
+.weather-top {
+    display: flex;
+    align-self: center;
+    align-items: center;
+}
+
+.weather-icon {
+    width: 50px;
+}
+
+.temperature {
+    margin: 0 0 0 -0.2em;
+    font-size: 2rem;
+}
+
+.city {
+    margin: -0.3em 0.2em 0 0;
+    text-align: end;
+}
 
 .time {
-    grid-column: 2/3;
+    grid-column: span 3;
     justify-self: center;
     align-self: center;
     font-size: 4rem;
+    text-align: center;
 }
 
 .img-author {
@@ -53,10 +77,11 @@ main {
     gap: 0.5em;
     font-weight: 700;
 }
+
 .crypto-info {
     margin: 0.5em 1em;
 }
 
-.crypto-info > p {
+.crypto-info>p {
     margin: 0;
 }
